tests/fixtures/nupm/rejected/external-deps/dep-module/mod.nu
export def main [] { "depends on other-pkg" }
